Fix input label spacing

--- a/components/input.module.css
+++ b/components/input.module.css
@@ -8,6 +8,8 @@
 }
 
 .label {
+  display: inline-block;
+  margin-bottom: var(--space-4);
   font-size: var(--fs-14);
   font-weight: var(--fw-medium);
 }
